# cpp_rest_service

./: .gitignore  CMakeLists.txt  LICENSE  package-lock.json
frontend/: index.html  script.js
frontend/react-app/: package.json
frontend/react-app/public/: index.html
frontend/react-app/src/: App.css  App.js  MyForm.js  Routes.js
frontend/react-app/src/components/: AppliedRoute.js  LoaderButton.css  LoaderButton.js
frontend/react-app/src/containers/: Galery.js  Home.css  Home.js  Login.css  Login.js  NotFound.css  NotFound.js  Signup.css  Signup.js  User.css  User.js  Users.css  Users.js
frontend/react-app/src/libs/: hooksLib.js
libs/: build_dependencies.sh
source/: db_manager.cpp  db_manager.hpp  kjUtils.hpp  kj_utils.hpp  main.cpp  microsvc_controller.cpp  microsvc_controller.hpp  user_manager.cpp  user_manager.hpp
source/foundation/: basic_controller.cpp  network_utils.cpp
source/foundation/include/: basic_controller.hpp  controller.hpp  date.hpp  network_utils.hpp  runtime_utils.hpp  usr_interrupt_handler.hpp
